#195: Fix overflow on text editor bubble menu (#206)

--- a/src/App.css
+++ b/src/App.css
@@ -1279,7 +1279,8 @@ img {
         background-color: unset;
         border: 0px;
         border-radius: 5px;
-        height: fit-content;
+        padding-left: 5px;
+        padding-right: 5px;
 
         ul, ol {
         margin-bottom: 0px;
